--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,7 +36,7 @@ repositories {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:26.1.0"
+    implementation "com.android.support:appcompat-v7:26.1.0"
     //noinspection GradleDynamicVersion
-    compile 'com.facebook.react:react-native:+'
+    implementation 'com.facebook.react:react-native:+'
 }
